# fastapi_tortoise_aerich_template

./: Makefile  README.md  main.py  pyproject.toml
backend/: conftest.py
backend/core/: database.py
backend/core/settings/: app_settings.py
backend/ping/: api.py  models.py
backend/ping/tests/: test_model.py  test_ping.py
migrations/models/: 1_20220505023917_add_ping.sql
